Added image dimensions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,5 +40,10 @@
 </head>
 <body>
 	{{ content }}
+	
+	<script>
+	  $(function() {$('img').css('width','800px');})
+	</script>
+	
 </body>
 </html>
