Added model diagram

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,9 @@
 	
 	<script type="text/javascript">
 	$(function() {
-		$(".slide").slippy({});
+		$(".slide").slippy({
+		  animLen: 0
+		});
 	});
 	SyntaxHighlighter.all();
 	</script>
